--- a/hym/index.html
+++ b/hym/index.html
@@ -52,7 +52,7 @@
             <div class="col-md-4 column">
                 <div class="page-header">
                     <h2>
-                        🤸‍♀️We Have Met<sup>*</sup> <br/>
+                        🤸‍♀️We Have Met <br/>
                         <h3><b><span id="met"></span> days</b></h3>
                         <!-- wjl: 2019/5/9 hym: 2016/2/4 lzy: 2015/2/5 yc: 2013/7/31 -->
                     </h2>
@@ -199,9 +199,6 @@
                         All designed by Johnson, ZhangZihao.
                     </dt>
                     <dd>
-                        *Data comes from the Tencent QQ Statistic in friend interface.
-                    </dd>
-                    <dd>
                         <a href="https://zihol.studio ">Portfolio</a> · <a href="https://blog.zihol.studio ">Blog</a> · <a href="https://github.com/greatzh ">GitHub</a>
                     </dd>
                 </dl>
@@ -230,7 +227,7 @@
     dateTime = cday + '/' + cmonth + '/' + cyear;
     document.getElementById('dateTime').innerHTML = dateTime;
 
-    var startTime1 = new Date("2016/2/4 ");
+    var startTime1 = new Date("2015/1/1 ");
     var startTime2 = new Date("1998/6/20 ");
     var startTime3 = new Date("2021/6/20 ");
     var startTime4 = new Date("2021/1/9 ");
