--- a/zl/BirthdayCake.html
+++ b/zl/BirthdayCake.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Happy Birthday</title>
 
-    <link rel="stylesheet" href="css/cake.css" media="screen" type="text/css" />
-    <link rel="stylesheet" href="css/content.css" />
-    <link rel="stylesheet" href="css/bubblefloat.css" />
+    <link rel="stylesheet" href="https://sp.zihol.studio/zl/css/cake.css" media="screen" type="text/css" />
+    <link rel="stylesheet" href="https://sp.zihol.studio/zl/css/content.css" />
+    <link rel="stylesheet" href="https://sp.zihol.studio/zl/css/bubblefloat.css" />
 </head>
 
 <body>
@@ -172,10 +172,10 @@
 </svg>
         <div class="name" style="z-index: 100;"><span>Zhou Long</span></div>
         <div class="happy" style="z-index: 100;">
-            <img src="img/HappyBirthday.png">
+            <img src="https://sp.zihol.studio/zl/img/HappyBirthday.png">
         </div>
         <div class="button-style1">
-            <a href="Memories.html" class="lk1">
+            <a href="/zl/Memories.html" class="lk1">
                 <div class="link1">
                     <div class="bt1">
                         Awesome!!!
@@ -224,12 +224,12 @@
             <p></p>
         </div>
 
-        <script src='js/jquery.js'></script>
-        <script src='js/happy.js'></script>
+        <script src='https://sp.zihol.studio/zl/js/jquery.js'></script>
+        <script src='https://sp.zihol.studio/zl/js/happy.js'></script>
         <script src="https://cdn.bootcss.com/d3-transform/1.0.4/d3-transform.js"></script>
-        <script src="js/bubblefloat.js"></script>
+        <script src="https://sp.zihol.studio/zl/js/bubblefloat.js"></script>
 
-        <audio src="music/2.mp3" autoplay="true" loop="true"></audio>
+        <audio src="https://sp.zihol.studio/zl/music/2.mp3" autoplay="true" loop="true"></audio>
 </body>
 
 </html>
