--- a/zl/Memories.html
+++ b/zl/Memories.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=0.5, minimum-scale=0.5, maximum-scale=0.5, user-scalable=no">
     <title>Happy Birthday</title>
-    <link rel="stylesheet" href="css/jquery.fullPage.css">
-    <link rel="stylesheet" href="css/memories.css">
+    <link rel="stylesheet" href="https://sp.zihol.studio/zl/css/jquery.fullPage.css">
+    <link rel="stylesheet" href="https://sp.zihol.studio/zl/css/memories.css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
                         Our first meet, Do you still remember?
                     </div>
                     <div class="ly-imgbox11">
-                        <img class="ly-img11" src="img/1.jpg">
+                        <img class="ly-img11" src="https://sp.zihol.studio/zl/img/1.jpg">
                     </div>
                 </div>
                 <div class="ly-triangle11"></div>
@@ -160,10 +160,10 @@
     </div>
     <!-- <audio muted src="music/1.mp3" autoplay="autoplay" loop="loop"></audio> -->
 
-    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/jquery.fullPage.min.js"></script>
+    <script src="https://sp.zihol.studio/zl/js/jquery-2.1.1.min.js"></script>
+    <script src="https://sp.zihol.studio/zl/js/jquery.fullPage.min.js"></script>
     <!-- <script src="js/auto-play.js"></script> -->
-    <script src="js/memories.js"></script>
+    <script src="https://sp.zihol.studio/zl/js/memories.js"></script>
 </body>
 
 </html>
