--- a/zl/index.html
+++ b/zl/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="https://sp.zihol.studio/zl/css/index.css">
 </head>
 
 <body>
@@ -39,8 +39,8 @@
         </div>
     </div>
 
-    <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="js/index.js" type="text/javascript"></script>
+    <script src="https://sp.zihol.studio/zl/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+    <script src="https://sp.zihol.studio/zl/js/index.js" type="text/javascript"></script>
 
 </body>
 
