--- a/zl/Memories.html
+++ b/zl/Memories.html
@@ -85,7 +85,7 @@
                         生日快乐
                     </div>
                     <div class="ly-txt22">
-                        <p> 本年年</p>
+                        <p> 本命年</p>
                         <p> 加油啊</p>
                         <p> 努力啊</p>
                         <p> 好多话我也不知道怎么说</p>
@@ -131,7 +131,7 @@
                 <div class="timepoint11"></div>
                 <div class="ly-box11">
                     <div class="ly-txt11">
-                        2021-03-04
+                        2021-03-14
                     </div>
                     <div class="ly-txt12">
                         HappyBirthday
